cambios palabras sin sentidos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola a todos, este es mi promer p que al chicle no se que significa aun xd
+        Bueno voy aprendiendo, ya un poco mas de conocimiento sobre lo que hago
     </p>
 </body>
 </html>
